tests/derive_rc/fails/receiver_self.stderr
error: cannot derive `Rc` for a trait declaring `self` methods
 --> $DIR/receiver_self.rs:7:16
  |
7 |     fn extract(self);
  |                ^^^^
